--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -14,7 +14,79 @@
 					<a href="text/imprint.xhtml">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml"><span epub:type="z3998:roman">I</span>: CHAPTER_TITLE</a>
+					<a href="text/chapter-1.xhtml">Author’s Note</a>
+				</li>
+				<li>
+					<a href="text/chapter-2.xhtml">Chapter 1: Tip Manufactures a Pumpkinhead</a>
+				</li>
+				<li>
+					<a href="text/chapter-3.xhtml">Chapter 2: The Marvelous Powder of Life</a>
+				</li>
+				<li>
+					<a href="text/chapter-4.xhtml">Chapter 3: The Flight of the Fugitives</a>
+				</li>
+				<li>
+					<a href="text/chapter-5.xhtml">Chapter 4: Tip Makes an Experiment in Magic</a>
+				</li>
+				<li>
+					<a href="text/chapter-6.xhtml">Chapter 5: The Awakening of the Saw-horse</a>
+				</li>
+				<li>
+					<a href="text/chapter-7.xhtml">Chapter 6: Jack Pumpkinhead’s Ride to the Emerald City</a>
+				</li>
+				<li>
+					<a href="text/chapter-8.xhtml">Chapter 7: His Majesty the Scarecrow</a>
+				</li>
+				<li>
+					<a href="text/chapter-9.xhtml">Chapter 8: Gen. Jinjur’s Army of Revolt</a>
+				</li>
+				<li>
+					<a href="text/chapter-10.xhtml">Chapter 9: The Scarecrow Plans an escape</a>
+				</li>
+				<li>
+					<a href="text/chapter-11.xhtml">Chapter 10: The Journey to the Tin Woodman</a>
+				</li>
+				<li>
+					<a href="text/chapter-12.xhtml">Chapter 11: A Nickel-Plated Emperor</a>
+				</li>
+				<li>
+					<a href="text/chapter-13.xhtml">Chapter 12: <abbr>Mr.</abbr> <abbr class="name"><abbr class="name">H. M.</abbr></abbr> Woggle-Bug, <abbr class="name"><abbr class="name">T. E.</abbr></abbr></a>
+				</li>
+				<li>
+					<a href="text/chapter-14.xhtml">Chapter 13: A Highly Magnified History</a>
+				</li>
+				<li>
+					<a href="text/chapter-15.xhtml">Chapter 14: Old Mombi indulges in Witchcraft</a>
+				</li>
+				<li>
+					<a href="text/chapter-16.xhtml">Chapter 15: The Prisoners of the Queen</a>
+				</li>
+				<li>
+					<a href="text/chapter-17.xhtml">Chapter 16: The Scarecrow Takes Time to Think</a>
+				</li>
+				<li>
+					<a href="text/chapter-18.xhtml">Chapter 17: The Astonishing Flight of the Gump</a>
+				</li>
+				<li>
+					<a href="text/chapter-19.xhtml">Chapter 18: In the Jackdaw’s Nest</a>
+				</li>
+				<li>
+					<a href="text/chapter-20.xhtml">Chapter 19: <abbr>Dr.</abbr> Nikidik’s Famous Wishing Pills</a>
+				</li>
+				<li>
+					<a href="text/chapter-21.xhtml">Chapter 20: The Scarecrow Appeals to Glinda the Good</a>
+				</li>
+				<li>
+					<a href="text/chapter-22.xhtml">Chapter 21: The Tin-Woodman Plucks a Rose</a>
+				</li>
+				<li>
+					<a href="text/chapter-23.xhtml">Chapter 22: The Transformation of Old Mombi</a>
+				</li>
+				<li>
+					<a href="text/chapter-24.xhtml">Chapter 23: Princess Ozma of Oz</a>
+				</li>
+				<li>
+					<a href="text/chapter-25.xhtml">Chapter 24: The Riches of Content</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml">Colophon</a>
@@ -34,7 +106,7 @@
 					<a href="text/imprint.xhtml" epub:type="frontmatter imprint">Imprint</a>
 				</li>
 				<li>
-					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">WORK_TITLE</a>
+					<a href="text/chapter-1.xhtml" epub:type="bodymatter z3998:fiction">The Marvelous Land of Oz</a>
 				</li>
 				<li>
 					<a href="text/colophon.xhtml" epub:type="backmatter colophon">Colophon</a>
