--- a/src/epub/toc.xhtml
+++ b/src/epub/toc.xhtml
@@ -29,7 +29,7 @@
 					<a href="text/chapter-5.xhtml">Chapter 4: Tip Makes an Experiment in Magic</a>
 				</li>
 				<li>
-					<a href="text/chapter-6.xhtml">Chapter 5: The Awakening of the Saw-horse</a>
+					<a href="text/chapter-6.xhtml">Chapter 5: The Awakening of the Saw-Horse</a>
 				</li>
 				<li>
 					<a href="text/chapter-7.xhtml">Chapter 6: Jack Pumpkinhead’s Ride to the Emerald City</a>
@@ -41,7 +41,7 @@
 					<a href="text/chapter-9.xhtml">Chapter 8: Gen. Jinjur’s Army of Revolt</a>
 				</li>
 				<li>
-					<a href="text/chapter-10.xhtml">Chapter 9: The Scarecrow Plans an escape</a>
+					<a href="text/chapter-10.xhtml">Chapter 9: The Scarecrow Plans an Escape</a>
 				</li>
 				<li>
 					<a href="text/chapter-11.xhtml">Chapter 10: The Journey to the Tin Woodman</a>
@@ -56,7 +56,7 @@
 					<a href="text/chapter-14.xhtml">Chapter 13: A Highly Magnified History</a>
 				</li>
 				<li>
-					<a href="text/chapter-15.xhtml">Chapter 14: Old Mombi indulges in Witchcraft</a>
+					<a href="text/chapter-15.xhtml">Chapter 14: Old Mombi Indulges in Witchcraft</a>
 				</li>
 				<li>
 					<a href="text/chapter-16.xhtml">Chapter 15: The Prisoners of the Queen</a>
